# WallShell

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.c  options.md  threaded_draft.c  wall_shell.c  wall_shell.h  wallshell_config.h
.github/workflows/: build-test.yml  doxygen.yml
docs/: FAQ.md  README.md  contributing.md  custom_console_setup.md  custom_threads.md  disable_malloc.md  doxygen.md  getting_started.md  logging.md  options.md  standard.md  things_to_note.md
docs/resources/: README.md  doxygen.md
docs/resources/doxygen-awesome-css/: doxygen-awesome.css
examples/: CMakeLists.txt  README.md  main.c  threaded_example.c
examples/freestanding/: freestanding.c  wallshell_config.c  wallshell_config.h
